--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "self-checkout",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://arthtechsupports.com/demo",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
