--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "self-checkout",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://arthtechsupports.com/demo",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "qrcode": "^1.5.0",
     "react": "^18.1.0",
+    "react-animations": "^1.0.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
+    "react-qr-barcode-scanner": "^1.0.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.52.1",
