--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "autoprefixer": "^10.4.7",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
+    "jQuery": "^1.7.4",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
