--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.7",
     "bootstrap": "^5.1.3",
+    "cbp-theme": "^1.11.0",
     "cors": "^2.8.5",
-    "jQuery": "^1.7.4",
+    "jquery": "npm:jQuery@^1.7.4",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
